--- a/index.html
+++ b/index.html
@@ -4,12 +4,131 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Vazifa-10</title>
 </head>
 <body>
-    
-    <h1>
-        Hello World!
-    </h1>
+    <div class="container">
+        <!-- saidbar start -->
+        <div class="saidbar">
+            <h1>INCREDIBLE</h1>
+            <ul>
+                <li><a href="#section1">Home</a></li>
+                <li><a href="#section2">About</a></li>
+                <li><a href="#section3">Gallery</a></li>
+                <li><a href="#section4">Contact</a></li>
+            </ul>
+            <div class="must">
+                <div class="kerak"><a href="#"><img src="/pictures/Vector (4).png" alt="rasm bor"></a></div>
+                <div class="kerak"><a href="#"><img src="/pictures/Vector (5).png" alt="rasm bor"></a></div>
+                <div class="kerak"><a href="#"><img src="/pictures/Vector (6).png" alt="rasm bor"></a></div>
+                <div class="kerak"><a href="#"><img src="/pictures/Vector (7).png" alt="rasm bor"></a></div>
+                <div class="kerak"><a href="#"><img src="/pictures/Vector (8).png" alt="rasm bor"></a></div>
+                <div class="kerak"><a href="#"><img src="/pictures/Vector (9).png" alt="rasm bor"></a></div>
+                <div class="kerak"><a href="#"><img src="/pictures/Vector (10).png" alt="rasm bor"></a></div>
+            </div>
+        </div>
+        <!-- saidbar end -->
+        <!-- section start -->
+          <div class="section">
+              <div class="home" id="section1">
+                  <h1>Welcome to the  INCREDIBLE</h1>
+                   <div class="button-text">
+                       <button>Button Text</button>
+                       <button class="button2">Button text</button>
+                   </div>
+              </div>
+              <!-- cards start -->
+              <div class="card-head">
+                  <div class="card-info">
+                    <h1>Section Heading</h1>
+                    <p>This is some text inside of a div block.</p>
+                  </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="pictures/Vector (2).png" alt="rasm bor">
+                        <h4>Style</h4>
+                        <p>Lorem ipsum dolor sit amet  <br>
+                         adipisicing elit repellendus <br>
+                         magni quis. Ducimus deserunt <br>
+                         beatae vel ipsa velit.</p>
+                         <a href="#">Text Link</a>
+                    </div>
+                    <div class="card">
+                        <img src="pictures/Vector.png" alt="rasm bor">
+                        <h4>Style</h4>
+                        <p>Lorem ipsum dolor sit amet  <br>
+                         adipisicing elit repellendus <br>
+                         magni quis. Ducimus deserunt <br>
+                         beatae vel ipsa velit.</p>
+                         <a href="#">Text Link</a>
+                    </div>
+                    <div class="card">
+                        <img src="pictures/Vector (3).png" alt="rasm bor">
+                        <h4>Style</h4>
+                        <p>Lorem ipsum dolor sit amet  <br>
+                         adipisicing elit repellendus <br>
+                         magni quis. Ducimus deserunt <br>
+                         beatae vel ipsa velit.</p>
+                         <a href="#">Text Link</a>
+                    </div>
+                    <div class="card">
+                        <img src="pictures/Vector (1).png" alt="rasm bor">
+                        <h4>Style</h4>
+                        <p>Lorem ipsum dolor sit amet  <br>
+                         adipisicing elit repellendus <br>
+                         magni quis. Ducimus deserunt <br>
+                         beatae vel ipsa velit.</p>
+                         <a href="#">Text Link</a>
+                    </div>
+                </div>
+            </div>
+            <!-- cards end -->
+            <!-- body1 start -->
+            <div class="body1">
+                <h1>Here you can put some text</h1>
+                <button>Call to Action</button>
+            </div>
+            <!-- body1 end -->
+            <!-- gallery start -->
+            <div class="gallery" id="section3">
+                <div class="gallery-info">
+                    <h2>LIGHTBOX SECTION</h2>
+                    <p>This is some text inside of a div block.</p>
+                </div>
+                <div class="pictures">
+                    <div class="item"><img src="pictures/IMAGE (1).png" alt="rasm bor"></div>
+                    <div class="item"><img src="pictures/IMAGE (2).png" alt="rasm bor"></div>
+                    <div class="item"><img src="pictures/IMAGE (3).png" alt="rasm bor"></div>
+                    <div class="item"><img src="pictures/IMAGE (4).png" alt="rasm bor"></div>
+                    <div class="item"><img src="pictures/IMAGE (5).png" alt="rasm bor"></div>
+                    <div class="item"><img src="pictures/IMAGE (6).png" alt="rasm bor"></div>
+                    <div class="item"><img src="pictures/IMAGE (7).png" alt="rasm bor"></div>
+                    <div class="item"><img src="pictures/IMAGE (8).png" alt="rasm bor"></div>
+                </div>
+            </div>
+            <!-- gallery end -->
+            <!-- contact start -->
+            <div class="contact" id="section4">
+                <div class="contact-info">
+                    <h1>Contact Form</h1>
+                    <p>This is some text inside of a div block.</p>
+                </div>
+                <div class="input1">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="input2">
+                    <textarea name="" id="" cols="30" rows="10">Message</textarea>
+                    <button>Send</button>
+                </div>
+            </div>
+            <!-- contact end -->
+            <div class="coder">
+                <p> &copy; Copyright Incredible. Made in @UzRijol</p>
+            </div>
+          </div>
+          <!-- section end -->
+    </div>
 </body>
 </html>
